networking-ingress.yaml
# Single Ingress for Both Frontend and Backend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  ingressClassName: nginx-external
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 7778
